# bookmanager

./: .editorconfig  .env  Cargo.toml
adapter/: Cargo.toml
adapter/src/database/: mod.rs
adapter/src/repository/: book.rs  health.rs
api/: Cargo.toml
api/src/handler/: book.rs  health.rs
api/src/model/: book.rs
api/src/route/: book.rs  health.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/entity/: books.rs  mod.rs  prelude.rs
kernel/src/model/book/: event.rs
kernel/src/repository/: book.rs  health.rs  mod.rs
migration/src/: lib.rs  m20250525_093053_create_books_table.rs
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: env.rs
src/: main.rs
