[package]
name = "bookmanager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry"
]

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate", "postgres"] }
tokio = { version = "1.45.0", features = ["full"] }
