[package]
name = "bookmanager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry"
]

[workspace.dependencies]
adapter = { path = "adapter" }
api = { path = "api" }
registry = { path = "registry" }
shared = { path = "shared" }
kernel = { path = "kernel" }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate", "postgres"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = { version = "0.1.88", features = [] }
derive-new = { version = "0.7.0", features = []  }


[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
hyper.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait = "0.1.88"
