[package]
name = "bookmanager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry",
    "migration"
]

[workspace.dependencies]
adapter = { path = "adapter" }
api = { path = "api" }
registry = { path = "registry" }
shared = { path = "shared" }
kernel = { path = "kernel" }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
hyper = { version = "1.6.0", features = ["full"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate", "postgres"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = { version = "0.1.88", features = [] }
derive-new = { version = "0.7.0", features = []  }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "sqlx-postgres", "macros"] }
dotenvy = "0.15.7"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
garde = "0.22.0"
tower-http = { version = "0.6.6", features = ["cors", "trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = "0.32.0"
bcrypt = "0.17.0"


[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
hyper.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
sea-orm.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strum.workspace = true
strum_macros.workspace = true
tower-http.workspace = true
garde.workspace = true
redis.workspace = true
bcrypt.workspace = true
