[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
kernel.workspace = true
derive-new.workspace = true
anyhow = "1.0.98"
dotenv = "0.15.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate", "postgres"] }
uuid = { version = "1.7.0", features = ["v4"] }
