[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
kernel.workspace = true
derive-new.workspace = true
sea-orm.workspace = true
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
sqlx = { version = "0.8.5", features = ["runtime-tokio", "uuid", "chrono", "macros", "migrate", "postgres"] }
uuid = { version = "1.7.0", features = ["v4"] }
migration = { path = "../migration" }
testcontainers = "0.24.0"
