[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
garde.workspace = true
axum.workspace = true
uuid.workspace = true
tracing.workspace = true
sqlx.workspace = true
redis.workspace = true
bcrypt.workspace = true
